fixed alignment, added the exit

--- a/public/index.css
+++ b/public/index.css
@@ -8,6 +8,12 @@ h1 {
     text-align: center;
 }
 
+.canvasBox {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .dosis-300 {
     font-family: "Dosis", sans-serif;
     font-optical-sizing: auto;
